# query-runner

./: .gitignore  README.md  config.template.yml  pyproject.toml
src/: logger.py  main.py
src/model/: database.py  postgres.py  result.py
